@@ -1,17 +1,20 @@
 package no.nav.dolly.bestilling.dokarkiv;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import ma.glasnost.orika.MapperFacade;
 import ma.glasnost.orika.MappingContext;
-import no.nav.dolly.bestilling.ClientFuture;
 import no.nav.dolly.bestilling.ClientRegister;
 import no.nav.dolly.bestilling.dokarkiv.domain.DokarkivRequest;
 import no.nav.dolly.bestilling.dokarkiv.domain.DokarkivResponse;
 import no.nav.dolly.bestilling.dokarkiv.domain.JoarkTransaksjon;
+import no.nav.dolly.bestilling.dokarkiv.dto.TransaksjonIdDTO;
 import no.nav.dolly.bestilling.personservice.PersonServiceConsumer;
+import no.nav.dolly.config.ApplicationConfig;
+import no.nav.dolly.consumer.dokumentarkiv.SafConsumer;
 import no.nav.dolly.domain.PdlPersonBolk;
 import no.nav.dolly.domain.jpa.BestillingProgress;
 import no.nav.dolly.domain.jpa.TransaksjonMapping;
@@ -19,19 +22,29 @@ import no.nav.dolly.domain.resultset.RsDollyUtvidetBestilling;
 import no.nav.dolly.domain.resultset.dokarkiv.RsDokarkiv;
 import no.nav.dolly.domain.resultset.dolly.DollyPerson;
 import no.nav.dolly.errorhandling.ErrorStatusDecoder;
+import no.nav.dolly.service.DokumentService;
+import no.nav.dolly.service.TransactionHelperService;
 import no.nav.dolly.service.TransaksjonMappingService;
-import no.nav.dolly.util.TransactionHelperService;
+import no.nav.testnav.libs.reactivecore.web.WebClientError;
+import org.apache.commons.lang3.BooleanUtils;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
 import static no.nav.dolly.domain.resultset.SystemTyper.DOKARKIV;
+import static no.nav.dolly.errorhandling.ErrorStatusDecoder.encodeStatus;
+import static no.nav.dolly.errorhandling.ErrorStatusDecoder.getInfoVenter;
+import static org.apache.commons.lang3.BooleanUtils.isFalse;
+import static org.apache.commons.lang3.BooleanUtils.isTrue;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
@@ -40,69 +53,121 @@ import static org.apache.commons.lang3.StringUtils.isNotBlank;
 @RequiredArgsConstructor
 public class DokarkivClient implements ClientRegister {
 
+    private final ApplicationConfig applicationConfig;
     private final DokarkivConsumer dokarkivConsumer;
-    private final MapperFacade mapperFacade;
-    private final TransaksjonMappingService transaksjonMappingService;
-    private final ObjectMapper objectMapper;
-    private final TransactionHelperService transactionHelperService;
-    private final PersonServiceConsumer personServiceConsumer;
+    private final DokumentService dokumentService;
     private final ErrorStatusDecoder errorStatusDecoder;
+    private final MapperFacade mapperFacade;
+    private final ObjectMapper objectMapper;
+    private final PersonServiceConsumer personServiceConsumer;
+    private final SafConsumer safConsumer;
+    private final TransactionHelperService transactionHelperService;
+    private final TransaksjonMappingService transaksjonMappingService;
 
     @Override
-    public Flux<ClientFuture> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
+    public Mono<BestillingProgress> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
 
-        return Flux.just(bestilling)
-                .filter(bestilling1 -> nonNull(bestilling1.getDokarkiv()))
-                .map(RsDollyUtvidetBestilling::getDokarkiv)
-                .flatMap(dokarkiv -> Flux.from(getPersonData(List.of(dollyPerson.getIdent()))
-                                .map(person -> buildRequest(dokarkiv, person))
-                                .flatMap(request -> dokarkivConsumer.getEnvironments()
-                                        .flatMapIterable(env -> env)
-                                        .filter(env -> bestilling.getEnvironments().contains(env))
-                                        .flatMap(env ->
-                                                !transaksjonMappingService.existAlready(DOKARKIV,
-                                                        dollyPerson.getIdent(), env, bestilling.getId()) || isOpprettEndre ?
+        if (bestilling.getDokarkiv().isEmpty()) {
+            return Mono.empty();
+        }
 
-                                                        dokarkivConsumer.postDokarkiv(env, request)
-                                                                .map(status ->
-                                                                        getStatus(dollyPerson.getIdent(),
-                                                                                bestilling.getId(), status)) :
-
-                                                        Mono.just(env + ":OK")
-                                        ))
-                                .collect(Collectors.joining(",")))
-                        .map(status -> futurePersist(progress, status)));
+        return oppdaterStatus(progress, bestilling.getEnvironments().stream()
+                .map(miljo -> "%s:%s".formatted(miljo, getInfoVenter(DOKARKIV.name())))
+                .collect(Collectors.joining(",")))
+                .then(getPersonData(dollyPerson.getIdent())
+                        .flatMap(person -> getFilteredMiljoer(bestilling.getEnvironments())
+                                .flatMapMany(miljoer -> Flux.fromIterable(miljoer)
+                                        .flatMap(miljoe -> isOpprettDokument(miljoe, dollyPerson.getIdent(), bestilling.getId(), isOpprettEndre)
+                                                .flatMap(isOpprettDokument -> isTrue(isOpprettDokument)
+                                                        ?
+                                                        Flux.fromIterable(bestilling.getDokarkiv())
+                                                                .flatMap(dokarkiv ->
+                                                                        buildRequest(dokarkiv, person, bestilling.getId())
+                                                                                .flatMap(request -> dokarkivConsumer.postDokarkiv(miljoe, request)))
+                                                                .collectList()
+                                                                .flatMap(status -> getStatus(dollyPerson.getIdent(), bestilling.getId(), status))
+                                                        :
+                                                        Mono.just(miljoe + ":OK")
+                                                )
+                                        )
+                                        .timeout(Duration.ofSeconds(applicationConfig.getClientTimeout()))
+                                        .onErrorResume(error -> getErrors(error, miljoer))
+                                ))
+                        .collect(Collectors.joining(","))
+                        .flatMap(status -> oppdaterStatus(progress, status)));
     }
 
-    private ClientFuture futurePersist(BestillingProgress progress, String status) {
+    private Mono<Boolean> isOpprettDokument(String miljoe, String ident, Long bestillingId, Boolean isOpprettEndre) {
 
-        return () -> {
-            transactionHelperService.persister(progress,
-                    BestillingProgress::getDokarkivStatus,
-                    BestillingProgress::setDokarkivStatus, status);
-            return progress;
-        };
+        if (isTrue(isOpprettEndre)) {
+            return Mono.just(true);
+        }
+
+        return transaksjonMappingService.getTransaksjonMapping(DOKARKIV.name(), ident, bestillingId)
+                .doOnNext(transaksjonMapping -> log.info("Eksisterende transaksjonmapping {}", transaksjonMapping))
+                .filter(transaksjonMapping -> transaksjonMapping.getMiljoe().equals(miljoe))
+                .mapNotNull(transaksjon -> fromJson(transaksjon.getTransaksjonId()))
+                .doOnNext(transaksjon -> log.info("Verdi fra transaksjonmapping {}", transaksjon))
+                .flatMap(transaksjoner -> Flux.fromIterable(transaksjoner)
+                        .flatMap(transaksjon -> safConsumer.getDokument(miljoe, transaksjon.getJournalpostId(),
+                                transaksjon.getDokumentInfoId(), "ARKIV")))
+                .map(status -> isBlank(status.getFeilmelding()) && isNotBlank(status.getDokument()))
+                .doOnNext(status -> log.info("Dokument eksisterer {}", status))
+                .reduce(true, (a, b) -> a && b)
+                .flatMap(status -> {
+                    if (isFalse(status)) {
+                        return transaksjonMappingService.delete(ident, miljoe, DOKARKIV.name(), bestillingId)
+                                .thenReturn(status);
+                    }
+                    return Mono.just(status);
+                })
+                .map(BooleanUtils::isFalse)
+                .doOnNext(ok -> log.info("Opprett dokument {}", ok))
+                .defaultIfEmpty(true);
     }
 
-    private String getStatus(String ident, Long bestillingId, DokarkivResponse response) {
+    private Flux<String> getErrors(Throwable error, List<String> miljoer) {
+
+        return Flux.fromIterable(miljoer)
+                .map(miljoe -> "%s:%s".formatted(miljoe, encodeStatus(WebClientError.describe(error).getMessage())));
+    }
+
+    private Mono<BestillingProgress> oppdaterStatus(BestillingProgress progress, String status) {
+
+        return transactionHelperService.persister(progress,
+                BestillingProgress::getDokarkivStatus,
+                BestillingProgress::setDokarkivStatus, status);
+    }
+
+    private Mono<List<String>> getFilteredMiljoer(Set<String> miljoer) {
+
+        return dokarkivConsumer.getEnvironments()
+                .flatMapMany(Flux::fromIterable)
+                .filter(miljoer::contains)
+                .collectList();
+    }
+
+    private Mono<String> getStatus(String ident, Long bestillingId, List<DokarkivResponse> response) {
 
         log.info("Dokarkiv response {} for ident {}", response, ident);
 
         if (isNull(response)) {
-            return null;
+            return Mono.just("UKJENT:Intet svar");
         }
 
-        if (isBlank(response.getFeilmelding())) {
+        if (response.stream().allMatch(arkiv -> isBlank(arkiv.getFeilmelding()))) {
 
-            saveTransaksjonId(response, ident, bestillingId, response.getMiljoe());
-            return response.getMiljoe() + ":OK";
+            return saveTransaksjonId(response, ident, bestillingId, response.getFirst().getMiljoe())
+                    .then(Mono.just(response.getFirst().getMiljoe() + ":OK"));
 
         } else {
 
-            return String.format("%s:FEIL=Teknisk feil se logg! %s", response.getMiljoe(),
-                    isNotBlank(response.getFeilmelding()) ?
-                            ErrorStatusDecoder.encodeStatus(errorStatusDecoder.getStatusMessage(response.getFeilmelding())) :
-                            "UKJENT");
+            return Mono.just("%s:FEIL=Teknisk feil se logg! %s".formatted(response.getFirst().getMiljoe(),
+                    response.stream()
+                            .filter(arkiv -> isNotBlank(arkiv.getFeilmelding()))
+                            .map(arkiv -> encodeStatus(errorStatusDecoder.getStatusMessage(arkiv.getFeilmelding())))
+                            .findFirst()
+                            .orElse("UKJENT")));
         }
     }
 
@@ -112,9 +177,9 @@ public class DokarkivClient implements ClientRegister {
         // Sletting er ikke støttet
     }
 
-    private Flux<PdlPersonBolk.PersonBolk> getPersonData(List<String> identer) {
+    private Flux<PdlPersonBolk.PersonBolk> getPersonData(String ident) {
 
-        return personServiceConsumer.getPdlPersoner(identer)
+        return personServiceConsumer.getPdlPersoner(List.of(ident))
                 .filter(pdlPersonBolk -> nonNull(pdlPersonBolk.getData()))
                 .map(PdlPersonBolk::getData)
                 .map(PdlPersonBolk.Data::getHentPersonBolk)
@@ -122,26 +187,33 @@ public class DokarkivClient implements ClientRegister {
                 .filter(personBolk -> nonNull(personBolk.getPerson()));
     }
 
-    private DokarkivRequest buildRequest(RsDokarkiv rsDokarkiv, PdlPersonBolk.PersonBolk personBolk) {
+    private Mono<DokarkivRequest> buildRequest(RsDokarkiv rsDokarkiv, PdlPersonBolk.PersonBolk personBolk, Long bestillingId) {
 
-        var context = new MappingContext.Factory().getContext();
-        context.setProperty("personBolk", personBolk);
-
-        return mapperFacade.map(rsDokarkiv, DokarkivRequest.class, context);
+        return dokumentService.getDokumenterByBestilling(bestillingId)
+                .collectList()
+                .map(dokumenter -> {
+                    var context = new MappingContext.Factory().getContext();
+                    context.setProperty("personBolk", personBolk);
+                    context.setProperty("dokumenter", dokumenter);
+                    return context;
+                })
+                .map(context -> mapperFacade.map(rsDokarkiv, DokarkivRequest.class, context));
     }
 
-    private void saveTransaksjonId(DokarkivResponse response, String ident, Long bestillingId, String miljoe) {
+    private Mono<TransaksjonMapping> saveTransaksjonId(List<DokarkivResponse> response, String ident, Long bestillingId, String miljoe) {
 
         log.info("Lagrer transaksjon for {} i {} ", ident, miljoe);
 
-        transaksjonMappingService.save(
+        return transaksjonMappingService.save(
                 TransaksjonMapping.builder()
                         .ident(ident)
                         .bestillingId(bestillingId)
-                        .transaksjonId(toJson(JoarkTransaksjon.builder()
-                                .journalpostId(response.getJournalpostId())
-                                .dokumentInfoId(response.getDokumenter().get(0).getDokumentInfoId())
-                                .build()))
+                        .transaksjonId(toJson(response.stream()
+                                .map(arkiv -> JoarkTransaksjon.builder()
+                                        .journalpostId(arkiv.getJournalpostId())
+                                        .dokumentInfoId(arkiv.getDokumenter().getFirst().getDokumentInfoId())
+                                        .build())
+                                .toList()))
                         .datoEndret(LocalDateTime.now())
                         .miljoe(miljoe)
                         .system(DOKARKIV.name())
@@ -158,4 +230,19 @@ public class DokarkivClient implements ClientRegister {
         return null;
     }
 
+    private List<TransaksjonIdDTO> fromJson(JsonNode transaksjon) {
+
+        var transaksjoner = new ArrayList<TransaksjonIdDTO>();
+        transaksjon.iterator()
+                .forEachRemaining(node ->
+                        {
+                            try {
+                                transaksjoner.add(objectMapper.treeToValue(node, TransaksjonIdDTO.class));
+                            } catch (JsonProcessingException e) {
+                                log.error("Feilet å konvertere transaksjonsId for dokarkiv", e);
+                            }
+                        }
+                );
+        return transaksjoner;
+    }
 }
