@@ -3,19 +3,22 @@ package no.nav.dolly.bestilling.sigrunstub;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import ma.glasnost.orika.MapperFacade;
-import no.nav.dolly.bestilling.ClientFuture;
 import no.nav.dolly.bestilling.ClientRegister;
 import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubLignetInntektRequest;
 import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubPensjonsgivendeInntektRequest;
 import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubResponse;
+import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubSummertskattegrunnlagRequest;
+import no.nav.dolly.bestilling.sigrunstub.dto.SigrunstubSummertskattegrunnlagRequest.Summertskattegrunnlag;
 import no.nav.dolly.domain.jpa.BestillingProgress;
 import no.nav.dolly.domain.resultset.RsDollyUtvidetBestilling;
 import no.nav.dolly.domain.resultset.dolly.DollyPerson;
 import no.nav.dolly.errorhandling.ErrorStatusDecoder;
 import no.nav.dolly.mapper.MappingContextUtils;
-import no.nav.dolly.util.TransactionHelperService;
+import no.nav.dolly.service.TransactionHelperService;
+import org.reactivestreams.Publisher;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -27,8 +30,7 @@ import static java.util.Objects.isNull;
 @RequiredArgsConstructor
 public class SigrunStubClient implements ClientRegister {
 
-    private static final String LIGNET_INNTEKT = "SIGRUN_LIGNET:";
-    private static final String PENSJONSGIVENDE_INNTEKT = "SIGRUN_PENSJONSGIVENDE:";
+    private static final String IDENT = "ident";
 
     private final SigrunStubConsumer sigrunStubConsumer;
     private final ErrorStatusDecoder errorStatusDecoder;
@@ -36,49 +38,78 @@ public class SigrunStubClient implements ClientRegister {
     private final TransactionHelperService transactionHelperService;
 
     @Override
-    public Flux<ClientFuture> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
+    public Mono<BestillingProgress> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
 
-        return Flux.from(Flux.merge(
-                        Flux.just(bestilling)
-                                .filter(bestilling1 -> !bestilling1.getSigrunstub().isEmpty())
-                                .map(RsDollyUtvidetBestilling::getSigrunstub)
-                                .flatMap(lignetInntekt -> {
-
-                                    var context = MappingContextUtils.getMappingContext();
-                                    context.setProperty("ident", dollyPerson.getIdent());
-
-                                    var skattegrunnlag =
-                                            mapperFacade.mapAsList(lignetInntekt, SigrunstubLignetInntektRequest.class, context);
-
-                                    return sigrunStubConsumer.updateLignetInntekt(skattegrunnlag)
-                                            .map(this::getStatus)
-                                            .map(status -> LIGNET_INNTEKT + status);
-                                }),
-                        Flux.just(bestilling)
-                                .filter(bestilling2 -> !bestilling2.getSigrunstubPensjonsgivende().isEmpty())
-                                .map(RsDollyUtvidetBestilling::getSigrunstubPensjonsgivende)
-                                .flatMap(pensjonsgivende -> {
-
-                                    var context = MappingContextUtils.getMappingContext();
-                                    context.setProperty("ident", dollyPerson.getIdent());
-
-                                    var skattegrunnlag =
-                                            mapperFacade.mapAsList(pensjonsgivende, SigrunstubPensjonsgivendeInntektRequest.class, context);
-
-                                    return sigrunStubConsumer.updatePensjonsgivendeInntekt(skattegrunnlag)
-                                            .map(this::getStatus)
-                                            .map(status -> PENSJONSGIVENDE_INNTEKT + status);
-                                }))
+        return Flux.merge(
+                        doLignetInntekt(bestilling, dollyPerson),
+                        doPensjonsgivendeInntekt(bestilling, dollyPerson),
+                        doSummertSkattegrunnlag(bestilling, dollyPerson))
                 .collect(Collectors.joining(","))
-                .map(resultat -> futurePersist(progress, resultat)));
+                .flatMap(resultat -> oppdaterStatus(progress, resultat));
     }
 
-    private ClientFuture futurePersist(BestillingProgress progress, String status) {
+    private Publisher<String> doSummertSkattegrunnlag(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
 
-        return () -> {
-            transactionHelperService.persister(progress, BestillingProgress::setSigrunstubStatus, status);
-            return progress;
-        };
+        return Flux.just(bestilling)
+                .filter(bestilling1 -> !bestilling1.getSigrunstubSummertSkattegrunnlag().isEmpty())
+                .map(RsDollyUtvidetBestilling::getSigrunstubSummertSkattegrunnlag)
+                .flatMap(summertSkattegrunnlag -> {
+
+                    var context = MappingContextUtils.getMappingContext();
+                    context.setProperty(IDENT, dollyPerson.getIdent());
+
+                    var skattegrunnlag = SigrunstubSummertskattegrunnlagRequest.builder()
+                            .summertskattegrunnlag(
+                                    mapperFacade.mapAsList(summertSkattegrunnlag, Summertskattegrunnlag.class, context)
+                            ).build();
+
+                    return sigrunStubConsumer.createSigrunstubSummertSkattegrunnlag(skattegrunnlag)
+                            .map(this::getStatus)
+                            .map(status -> "SIGRUN_SUMMERT:" + status);
+                });
+    }
+
+    private Flux<String> doPensjonsgivendeInntekt(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
+
+        return Flux.just(bestilling)
+                .filter(bestilling2 -> !bestilling2.getSigrunstubPensjonsgivende().isEmpty())
+                .map(RsDollyUtvidetBestilling::getSigrunstubPensjonsgivende)
+                .flatMap(pensjonsgivende -> {
+
+                    var context = MappingContextUtils.getMappingContext();
+                    context.setProperty(IDENT, dollyPerson.getIdent());
+
+                    var skattegrunnlag =
+                            mapperFacade.mapAsList(pensjonsgivende, SigrunstubPensjonsgivendeInntektRequest.class, context);
+
+                    return sigrunStubConsumer.updatePensjonsgivendeInntekt(skattegrunnlag)
+                            .map(this::getStatus)
+                            .map(status -> "SIGRUN_PENSJONSGIVENDE:" + status);
+                });
+    }
+
+    private Flux<String> doLignetInntekt(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson) {
+
+        return Flux.just(bestilling)
+                .filter(bestilling1 -> !bestilling1.getSigrunstub().isEmpty())
+                .map(RsDollyUtvidetBestilling::getSigrunstub)
+                .flatMap(lignetInntekt -> {
+
+                    var context = MappingContextUtils.getMappingContext();
+                    context.setProperty(IDENT, dollyPerson.getIdent());
+
+                    var skattegrunnlag =
+                            mapperFacade.mapAsList(lignetInntekt, SigrunstubLignetInntektRequest.class, context);
+
+                    return sigrunStubConsumer.updateLignetInntekt(skattegrunnlag)
+                            .map(this::getStatus)
+                            .map(status -> "SIGRUN_LIGNET:" + status);
+                });
+    }
+
+    private Mono<BestillingProgress> oppdaterStatus(BestillingProgress progress, String status) {
+
+        return transactionHelperService.persister(progress, BestillingProgress::setSigrunstubStatus, status);
     }
 
     @Override
@@ -91,7 +122,11 @@ public class SigrunStubClient implements ClientRegister {
                         sigrunStubConsumer.deletePensjonsgivendeInntekt(identer)
                                 .filter(SigrunstubResponse::isOK)
                                 .count()
-                                .map(antall -> "pensjonsgivende inntekt: " + antall))
+                                .map(antall -> "pensjonsgivende inntekt: " + antall),
+                        sigrunStubConsumer.deleteSummertSkattegrunnlag(identer)
+                                .filter(SigrunstubResponse::isOK)
+                                .count()
+                                .map(antall -> "summert skattegrunnlag: " + antall))
                 .collect(Collectors.joining(", "))
                 .subscribe(response -> log.info("Slettet antall {} fra Sigrunstub", response));
     }
@@ -99,7 +134,7 @@ public class SigrunStubClient implements ClientRegister {
     private String getStatus(SigrunstubResponse response) {
 
         log.info("Response fra Sigrunstub med data {} ", response);
-        return isNull(response.getStatus()) ?
+        return isNull(response.getStatus()) || response.isOK() ?
                 getStatus(response.getOpprettelseTilbakemeldingsListe()) :
                 ErrorStatusDecoder.encodeStatus(errorStatusDecoder.getErrorText(response.getStatus(), response.getMelding()));
     }
@@ -108,10 +143,11 @@ public class SigrunStubClient implements ClientRegister {
 
         return tilbakemeldinger.stream()
                 .allMatch(SigrunstubResponse.OpprettelseTilbakemelding::isOK) ? "OK" :
-                ErrorStatusDecoder.encodeStatus(String.format("Feil: %s",
+                ErrorStatusDecoder.encodeStatus("Feil: %s".formatted(
                         tilbakemeldinger.stream()
                                 .filter(SigrunstubResponse.OpprettelseTilbakemelding::isError)
-                                .map(status -> String.format("Inntektsår: %s, feilmelding: %s", status.getInntektsaar(), status.getMessage()))
+                                .map(status -> "Inntektsår: %s, feilmelding: %s".formatted(
+                                        status.getInntektsaar(), status.getMessage()))
                                 .collect(Collectors.joining(", "))));
     }
 }
