@@ -2,25 +2,27 @@ package no.nav.dolly.bestilling.tpsmessagingservice;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import ma.glasnost.orika.MapperFacade;
-import no.nav.dolly.bestilling.ClientFuture;
 import no.nav.dolly.bestilling.ClientRegister;
 import no.nav.dolly.bestilling.personservice.PersonServiceConsumer;
 import no.nav.dolly.bestilling.skjermingsregister.SkjermingUtil;
+import no.nav.dolly.config.ApplicationConfig;
 import no.nav.dolly.domain.PdlPerson;
 import no.nav.dolly.domain.PdlPersonBolk;
 import no.nav.dolly.domain.jpa.BestillingProgress;
 import no.nav.dolly.domain.resultset.RsDollyUtvidetBestilling;
 import no.nav.dolly.domain.resultset.dolly.DollyPerson;
 import no.nav.dolly.errorhandling.ErrorStatusDecoder;
-import no.nav.dolly.util.TransactionHelperService;
-import no.nav.testnav.libs.data.tpsmessagingservice.v1.SpraakDTO;
+import no.nav.dolly.service.TransactionHelperService;
 import no.nav.testnav.libs.data.tpsmessagingservice.v1.TpsMeldingResponseDTO;
+import no.nav.testnav.libs.reactivecore.web.WebClientError;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import java.time.Duration;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
@@ -34,7 +36,6 @@ import static no.nav.dolly.bestilling.kontoregisterservice.util.BankkontoGenerat
 import static no.nav.dolly.bestilling.kontoregisterservice.util.BankkontoGenerator.tilfeldigUtlandskBankkonto;
 import static no.nav.dolly.errorhandling.ErrorStatusDecoder.getInfoVenter;
 import static org.apache.commons.lang3.BooleanUtils.isTrue;
-import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
 @Slf4j
 @Service
@@ -46,10 +47,10 @@ public class TpsMessagingClient implements ClientRegister {
     private static final String TPS_MESSAGING = "TPS";
 
     private final TpsMessagingConsumer tpsMessagingConsumer;
-    private final MapperFacade mapperFacade;
     private final PersonServiceConsumer personServiceConsumer;
     private final TransactionHelperService transactionHelperService;
     private final MiljoerConsumer miljoerConsumer;
+    private final ApplicationConfig applicationConfig;
 
     private static String getResultat(TpsMeldingResponseDTO respons) {
 
@@ -61,9 +62,9 @@ public class TpsMessagingClient implements ClientRegister {
 
         return !statuser.isEmpty() ?
 
-                String.format("%s#%s", melding,
+                "%s#%s".formatted(melding,
                         statuser.stream()
-                                .map(respons -> String.format(STATUS_FMT,
+                                .map(respons -> STATUS_FMT.formatted(
                                         respons.getMiljoe(),
                                         getResultat(respons)))
                                 .collect(Collectors.joining(","))) :
@@ -72,63 +73,66 @@ public class TpsMessagingClient implements ClientRegister {
 
     @Override
     @SuppressWarnings("S1144")
-    public Flux<ClientFuture> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
+    public Mono<BestillingProgress> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
 
-        return Flux.from(miljoerConsumer.getMiljoer()
-                        .flatMap(miljoer -> {
-
-                            if (!dollyPerson.isOrdre() && isTpsMessage(bestilling)) {
-                                transactionHelperService.persister(progress, BestillingProgress::getTpsMessagingStatus,
+        return miljoerConsumer.getMiljoer()
+                .flatMap(miljoer -> !dollyPerson.isOrdre() && isTpsMessage(bestilling) ?
+                        transactionHelperService.persister(progress, BestillingProgress::getTpsMessagingStatus,
                                         BestillingProgress::setTpsMessagingStatus,
-                                        prepTpsMessagingStatus(miljoer), SEP);
-                            }
+                                        prepTpsMessagingStatus(miljoer), SEP)
+                                .thenReturn(miljoer) :
+                        Mono.just(miljoer))
+                .flatMap(miljoer -> getIdenterHovedpersonOgPartner(dollyPerson.getIdent())
+                        .flatMap(this::getPersonData)
+                        .collectList()
+                        .flatMapMany(personer -> Flux.concat(
+                                sendBankkontonummerNorge(bestilling, dollyPerson.getIdent())
+                                        .map(respons -> Map.of("NorskBankkonto", respons)),
+                                sendBankkontonummerUtenland(bestilling, dollyPerson.getIdent())
+                                        .map(respons -> Map.of("UtenlandskBankkonto", respons)),
+                                sendEgenansattSlett(bestilling, dollyPerson.getIdent())
+                                        .map(respons -> Map.of("Egenansatt_slett", respons)),
+                                sendEgenansatt(bestilling, dollyPerson.getIdent())
+                                        .map(respons -> Map.of("Egenansatt_opprett", respons))
+                        ))
+                        .map(respons -> respons.entrySet().stream()
+                                .map(entry -> getStatus(entry.getKey(), entry.getValue()))
+                                .toList())
+                        .flatMap(Flux::fromIterable)
+                        .filter(StringUtils::isNotBlank)
+                        .timeout(Duration.ofSeconds(applicationConfig.getClientTimeout()))
+                        .onErrorResume(error -> getError(error, miljoer))
+                        .collect(Collectors.joining(SEP))
+                )
+                .flatMap(status -> oppdaterStatus(dollyPerson, progress, status));
+    }
 
-                            return getIdenterHovedpersonOgPartner(dollyPerson.getIdent())
-                                    .flatMap(this::getPersonData)
-                                    .collectList()
-                                    .flatMapMany(personer -> Flux.concat(
-                                            sendSpraakkode(bestilling, dollyPerson.getIdent())
-                                                    .map(respons -> Map.of("SpråkKode", respons)),
-                                            sendBankkontonummerNorge(bestilling, dollyPerson.getIdent())
-                                                    .map(respons -> Map.of("NorskBankkonto", respons)),
-                                            sendBankkontonummerUtenland(bestilling, dollyPerson.getIdent())
-                                                    .map(respons -> Map.of("UtenlandskBankkonto", respons)),
-                                            sendEgenansattSlett(bestilling, dollyPerson.getIdent())
-                                                    .map(respons -> Map.of("Egenansatt_slett", respons)),
-                                            sendEgenansatt(bestilling, dollyPerson.getIdent())
-                                                    .map(respons -> Map.of("Egenansatt_opprett", respons))
-                                    ))
-                                    .map(respons -> respons.entrySet().stream()
-                                            .map(entry -> getStatus(entry.getKey(), entry.getValue()))
-                                            .toList())
-                                    .flatMap(Flux::fromIterable)
-                                    .filter(StringUtils::isNotBlank)
-                                    .collect(Collectors.joining(SEP));
-                        }))
-                .map(status -> futurePersist(dollyPerson, progress, status));
+    private Flux<String> getError(Throwable error, List<String> miljoer) {
+
+        return Flux.just("Meldinger til TPS#%s".formatted(
+                miljoer.stream()
+                        .map(miljoe -> STATUS_FMT.formatted(
+                                miljoe,
+                                "FEIL= " + ErrorStatusDecoder.encodeStatus(WebClientError.describe(error).getMessage())))
+                        .collect(Collectors.joining(","))));
     }
 
     private boolean isTpsMessage(RsDollyUtvidetBestilling bestilling) {
 
-        return (nonNull(bestilling.getTpsMessaging()) &&
-                isNotBlank(bestilling.getTpsMessaging().getSpraakKode())) ||
-
-                nonNull(bestilling.getBankkonto()) ||
+        return nonNull(bestilling.getBankkonto()) ||
                 nonNull(bestilling.getSkjerming()) ||
 
                 (nonNull(bestilling.getPdldata()) &&
                         nonNull(bestilling.getPdldata().getPerson()));
     }
 
-    private ClientFuture futurePersist(DollyPerson dollyPerson, BestillingProgress progress, String status) {
+    private Mono<BestillingProgress> oppdaterStatus(DollyPerson dollyPerson, BestillingProgress progress, String status) {
 
-        return () -> {
-            if (!dollyPerson.isOrdre()) {
-                transactionHelperService.persister(progress, BestillingProgress::getTpsMessagingStatus,
-                        BestillingProgress::setTpsMessagingStatus, status, SEP);
-            }
-            return progress;
-        };
+        if (!dollyPerson.isOrdre()) {
+            return transactionHelperService.persister(progress, BestillingProgress::getTpsMessagingStatus,
+                    BestillingProgress::setTpsMessagingStatus, status, SEP);
+        }
+        return Mono.just(progress);
     }
 
     private String prepTpsMessagingStatus(List<String> miljoer) {
@@ -167,17 +171,6 @@ public class TpsMessagingClient implements ClientRegister {
                 .filter(personBolk -> nonNull(personBolk.getPerson()));
     }
 
-    private Mono<List<TpsMeldingResponseDTO>> sendSpraakkode(RsDollyUtvidetBestilling bestilling, String ident) {
-
-        return nonNull(bestilling.getTpsMessaging()) && nonNull(bestilling.getTpsMessaging().getSpraakKode()) ?
-
-                tpsMessagingConsumer.sendSpraakkodeRequest(ident, null,
-                                mapperFacade.map(bestilling.getTpsMessaging().getSpraakKode(), SpraakDTO.class))
-                        .collectList() :
-
-                Mono.just(emptyList());
-    }
-
     private Mono<List<TpsMeldingResponseDTO>> sendEgenansattSlett(RsDollyUtvidetBestilling bestilling,
                                                                   String ident) {
 
@@ -195,7 +188,7 @@ public class TpsMessagingClient implements ClientRegister {
         return nonNull(SkjermingUtil.getEgenansattDatoFom(bestilling)) ?
 
                 tpsMessagingConsumer.sendEgenansattRequest(ident, null,
-                                SkjermingUtil.getEgenansattDatoFom(bestilling).toLocalDate())
+                                toLocalDate(SkjermingUtil.getEgenansattDatoFom(bestilling)))
                         .collectList() :
 
                 Mono.just(emptyList());
@@ -240,5 +233,10 @@ public class TpsMessagingClient implements ClientRegister {
 
             return Mono.just(emptyList());
         }
+    }
+
+    private LocalDate toLocalDate(LocalDateTime datoOgTid) {
+
+        return nonNull(datoOgTid) ? datoOgTid.toLocalDate() : null;
     }
 }
