@@ -1,76 +1,54 @@
 package no.nav.dolly.bestilling.arenaforvalter;
 
-import no.nav.dolly.domain.resultset.arenaforvalter.ArenaBruker;
+import no.nav.dolly.bestilling.AbstractConsumerTest;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyBruker;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyeBrukere;
-import no.nav.dolly.elastic.BestillingElasticRepository;
-import no.nav.testnav.libs.securitycore.domain.AccessToken;
 import no.nav.testnav.libs.securitycore.domain.ServerProperties;
-import no.nav.testnav.libs.standalone.servletsecurity.exchange.TokenExchange;
-import org.hamcrest.CoreMatchers;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentMatchers;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
-import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
-import reactor.core.publisher.Mono;
+import org.springframework.http.HttpStatus;
+import reactor.test.StepVerifier;
 
 import java.util.List;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.*;
+import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
+import static com.github.tomakehurst.wiremock.client.WireMock.delete;
+import static com.github.tomakehurst.wiremock.client.WireMock.equalTo;
+import static com.github.tomakehurst.wiremock.client.WireMock.get;
+import static com.github.tomakehurst.wiremock.client.WireMock.ok;
+import static com.github.tomakehurst.wiremock.client.WireMock.post;
+import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
+import static com.github.tomakehurst.wiremock.client.WireMock.urlPathMatching;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 
-@ActiveProfiles("test")
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-@TestPropertySource(locations = "classpath:application.yaml")
-@AutoConfigureWireMock(port = 0)
-class ArenaForvalterConsumerTest {
+
+class ArenaForvalterConsumerTest extends AbstractConsumerTest {
 
     private static final String IDENT = "12345678901";
     private static final String ENV = "q2";
 
-    @MockBean
-    private TokenExchange tokenService;
-
-    @MockBean
-    private AccessToken accessToken;
-
     @Autowired
     private ArenaForvalterConsumer arenaForvalterConsumer;
-
-    @MockBean
-    private BestillingElasticRepository bestillingElasticRepository;
-
-    @MockBean
-    private ElasticsearchOperations elasticsearchOperations;
-
-    @BeforeEach
-    void setup() {
-
-        when(tokenService.exchange(ArgumentMatchers.any(ServerProperties.class))).thenReturn(Mono.just(new AccessToken("token")));
-    }
 
     @Test
     void deleteIdent() {
 
+        stubGetMiljoe();
         stubDeleteArenaForvalterBruker();
 
-        var response = arenaForvalterConsumer.deleteIdenter(List.of(IDENT)).collectList().block();
+        /*var response = */
+        arenaForvalterConsumer.deleteIdenter(List.of(IDENT)).collectList()
+                .as(StepVerifier::create)
+                .assertNext(arenaBrukerList ->
+                        assertThat(arenaBrukerList.getFirst().getStatus(), is(HttpStatus.OK)))
+                .verifyComplete();
 
-        verify(tokenService).exchange(ArgumentMatchers.any(ServerProperties.class));
+        verify(tokenExchange).exchange(ArgumentMatchers.any(ServerProperties.class));
     }
 
     @Test
@@ -78,15 +56,16 @@ class ArenaForvalterConsumerTest {
 
         stubPostArenaForvalterBruker();
 
-        var response =
-                arenaForvalterConsumer.postArenaBruker(ArenaNyeBrukere.builder()
-                                .nyeBrukere(singletonList(ArenaNyBruker.builder().personident(IDENT).build()))
-                                .build())
-                        .collectList()
-                        .block();
-
-        assertThat(response.get(0).getArbeidsokerList().get(0).getStatus(), is(CoreMatchers.equalTo(ArenaBruker.BrukerStatus.OK)));
-        assertThat(response.get(0).getNyBrukerFeilList(), is(emptyList()));
+        arenaForvalterConsumer.postArenaBruker(ArenaNyeBrukere.builder()
+                        .nyeBrukere(singletonList(ArenaNyBruker.builder().personident(IDENT).build()))
+                        .build())
+                .collectList()
+                .as(StepVerifier::create)
+                .assertNext(response -> {
+                    assertThat(response.getFirst().getStatus(), is(HttpStatus.OK));
+                    assertThat(response.getFirst().getNyBrukerFeilList(), is(emptyList()));
+                })
+                .verifyComplete();
     }
 
     @Test
@@ -94,9 +73,18 @@ class ArenaForvalterConsumerTest {
 
         stubGetArenaForvalterBruker();
 
-        var response = arenaForvalterConsumer.getArenaBruker(IDENT, ENV).block();
+        StepVerifier.create(arenaForvalterConsumer.getArenaBruker(IDENT, ENV))
+                .expectNextMatches(arenaBruker ->
+                        arenaBruker.getStatus().is2xxSuccessful())
+                .verifyComplete();
+    }
 
-        assertThat("Response should be 200 successful", response.getStatus().is2xxSuccessful());
+    private void stubGetMiljoe() {
+
+        stubFor(get(urlPathMatching("(.*)/api/v1/miljoe"))
+                .willReturn(ok()
+                        .withHeader("Content-Type", "application/json")
+                        .withBody("[\"" + ENV + "\"]")));
     }
 
     private void stubDeleteArenaForvalterBruker() {
