@@ -5,21 +5,12 @@ parent: Applikasjoner
 ---
 
 # skattekort-service
-
 Tjeneste for å legge til skattekort i os-eskatt ved innsending til deres eget API for test.
 
 ## Bruk
-
 Applikasjonen omformer JSON-request til XML-request og sender inn på overnevnte endepunkt.
 
-
 ## Lokal kjøring
-
-Ha naisdevice kjørende og kjør SkattekortServiceApplicationStarter med følgende argumenter:
-
-```
---add-opens java.base/java.lang=ALL-UNNAMED
--Dspring.profiles.active=dev
--Dspring.cloud.vault.token=[vault-token]
-```
+* [Generelt.](../../docs/modules/ROOT/pages/local/local_general.adoc)
+* [Secret Manager.](../../docs/modules/ROOT/pages/local/local_secretmanager.adoc)
 
