@@ -8,19 +8,18 @@ import okhttp3.mockwebserver.Dispatcher;
 import okhttp3.mockwebserver.MockResponse;
 import okhttp3.mockwebserver.MockWebServer;
 import okhttp3.mockwebserver.RecordedRequest;
+import org.jetbrains.annotations.NotNull;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.slf4j.LoggerFactory;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.TestPropertySource;
+import org.springframework.web.reactive.function.client.WebClient;
 
 import java.io.IOException;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.stream.Collectors;
 
 import static no.nav.registre.sdforvalter.ResourceUtils.getResourceFileContent;
 import static org.hamcrest.CoreMatchers.containsString;
@@ -29,15 +28,13 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasItems;
 
-
-@TestPropertySource(locations = "classpath:application-test.yml")
-@ActiveProfiles("test")
 public class SyntAaregConsumerTest {
 
     private final String fnr1 = "01010101010";
     private final String fnr2 = "02020202020";
     private SyntAaregConsumer syntAaregConsumer;
     private MockWebServer mockWebServer;
+    private WebClient webClient;
 
     @Before
     public void setUp() throws IOException {
@@ -45,8 +42,7 @@ public class SyntAaregConsumerTest {
         this.mockWebServer.start();
         Dispatcher dispatcher = getDispatcher();
         mockWebServer.setDispatcher(dispatcher);
-        syntAaregConsumer = new SyntAaregConsumer(2,
-                mockWebServer.url("/synt-aareg").toString());
+        syntAaregConsumer = new SyntAaregConsumer(webClient, 2, mockWebServer.url("/synt-aareg").toString());
     }
 
     @Test
@@ -55,15 +51,15 @@ public class SyntAaregConsumerTest {
 
         var result = syntAaregConsumer.getSyntetiserteArbeidsforholdsmeldinger(fnrs);
 
-        assertThat(result.get(0).getArbeidsforhold().getArbeidstaker().getIdent(), equalTo(fnrs.get(0)));
-        assertThat(result.get(0).getArbeidsforhold().getArbeidsavtale().getArbeidstidsordning(), equalTo("doegnkontinuerligSkiftOgTurnus355"));
-        assertThat(result.get(0).getArbeidsforhold().getArbeidsavtale().getAvtaltArbeidstimerPerUke(), equalTo(35.5));
-        assertThat(result.get(0).getArbeidsforhold().getArbeidsavtale().getEndringsdatoStillingsprosent(), equalTo(LocalDate.of(1985, 8, 1)));
-        assertThat(result.get(0).getArbeidsforhold().getArbeidsavtale().getStillingsprosent(), equalTo(0.01));
-        assertThat(result.get(0).getArbeidsforhold().getAnsettelsesPeriode().getFom(), equalTo(LocalDate.of(1985, 8, 1)));
-        assertThat(result.get(0).getArbeidsforhold().getPermisjon().get(0).getPermisjonsId(), equalTo("a1b2c3"));
-        assertThat(result.get(0).getArbeidsforhold().getPermisjon().get(0).getPermisjonsprosent(), equalTo(10.5));
-        assertThat(result.get(0).getArbeidsforhold().getUtenlandsopphold().get(0).getLand(), equalTo("NOR"));
+        assertThat(result.getFirst().getArbeidsforhold().getArbeidstaker().getIdent(), equalTo(fnrs.getFirst()));
+        assertThat(result.getFirst().getArbeidsforhold().getArbeidsavtale().getArbeidstidsordning(), equalTo("doegnkontinuerligSkiftOgTurnus355"));
+        assertThat(result.getFirst().getArbeidsforhold().getArbeidsavtale().getAvtaltArbeidstimerPerUke(), equalTo(35.5));
+        assertThat(result.getFirst().getArbeidsforhold().getArbeidsavtale().getEndringsdatoStillingsprosent(), equalTo(LocalDate.of(1985, 8, 1)));
+        assertThat(result.getFirst().getArbeidsforhold().getArbeidsavtale().getStillingsprosent(), equalTo(0.01));
+        assertThat(result.getFirst().getArbeidsforhold().getAnsettelsesPeriode().getFom(), equalTo(LocalDate.of(1985, 8, 1)));
+        assertThat(result.getFirst().getArbeidsforhold().getPermisjon().getFirst().getPermisjonsId(), equalTo("a1b2c3"));
+        assertThat(result.getFirst().getArbeidsforhold().getPermisjon().getFirst().getPermisjonsprosent(), equalTo(10.5));
+        assertThat(result.getFirst().getArbeidsforhold().getUtenlandsopphold().getFirst().getLand(), equalTo("NOR"));
         assertThat(result.get(1).getArbeidsforhold().getArbeidstaker().getIdent(), equalTo(fnrs.get(1)));
         assertThat(result.get(1).getArbeidsforhold().getArbeidsforholdID(), equalTo("oAq5SJgOPDHQnERi"));
         assertThat(result.get(1).getArbeidsforhold().getArbeidsforholdstype(), equalTo("ordinaertArbeidsforhold"));
@@ -77,7 +73,7 @@ public class SyntAaregConsumerTest {
 
         var result = syntAaregConsumer.getSyntetiserteArbeidsforholdsmeldinger(fnrs);
 
-        var identsInResponse = result.stream().map(a -> a.getArbeidsforhold().getArbeidstaker().getIdent()).collect(Collectors.toList());
+        var identsInResponse = result.stream().map(a -> a.getArbeidsforhold().getArbeidstaker().getIdent()).toList();
 
         assertThat(identsInResponse, hasItems(fnrs.get(0), fnrs.get(1), fnrs.get(2)));
     }
@@ -94,7 +90,7 @@ public class SyntAaregConsumerTest {
         syntAaregConsumer.getSyntetiserteArbeidsforholdsmeldinger(fnrs);
 
         assertThat(listAppender.list.size(), is(equalTo(1)));
-        assertThat(listAppender.list.get(0).toString(), containsString("Feil under syntetisering"));
+        assertThat(listAppender.list.getFirst().toString(), containsString("Feil under syntetisering"));
     }
 
     @After
@@ -103,27 +99,33 @@ public class SyntAaregConsumerTest {
     }
 
     private Dispatcher getDispatcher() {
-        return new Dispatcher() {
-            @Override
-            public MockResponse dispatch(RecordedRequest request) {
-                if (request.getPath().equals("/synt-aareg/api/v1/generate_aareg") && request.getMethod().equals("POST")) {
-                    var body = request.getBody().readUtf8();
-                    switch (body) {
-                        case "[\"01010101010\",\"02020202020\"]":
-                            return new MockResponse().setResponseCode(200)
-                                    .addHeader("Content-Type", "application/json")
-                                    .setBody(getResourceFileContent("files/arbeidsforholdsmelding.json"));
-                        case "[\"03030303030\"]":
-                            return new MockResponse().setResponseCode(200)
-                                    .addHeader("Content-Type", "application/json")
-                                    .setBody(getResourceFileContent("files/arbeidsforholdsmelding_paged.json"));
-                        case "[\"01010101010\"]":
-                            return new MockResponse().setResponseCode(500);
-                    }
-                }
 
+        return new Dispatcher() {
+
+            @NotNull
+            @Override
+            public MockResponse dispatch(@NotNull RecordedRequest request) {
+
+                if ("/synt-aareg/api/v1/generate_aareg".equals(request.getPath()) && "POST".equals(request.getMethod())) {
+                    return switch (request.getBody().readUtf8()) {
+                        case "[\"01010101010\",\"02020202020\"]" -> new MockResponse()
+                                .setResponseCode(200)
+                                .addHeader("Content-Type", "application/json")
+                                .setBody(getResourceFileContent("files/arbeidsforholdsmelding.json"));
+                        case "[\"03030303030\"]" -> new MockResponse()
+                                .setResponseCode(200)
+                                .addHeader("Content-Type", "application/json")
+                                .setBody(getResourceFileContent("files/arbeidsforholdsmelding_paged.json"));
+                        case "[\"01010101010\"]" -> new MockResponse().setResponseCode(500);
+                        default ->
+                                throw new IllegalStateException("Unexpected request body: " + request.getBody().readUtf8());
+                    };
+                }
                 return new MockResponse().setResponseCode(404);
+
             }
+
         };
+
     }
 }
